[package]
name = "buzz-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# For UUID generation
# Need 'v4' feature for creating of new UUID version 4
uuid = { version="0.8.2" , features = ["default","v4"]}

# For serialization/deserialization
serde = {version = "1.0.126", features= ["derive"] }
serde_derive = "1.0.126"
serde_json = "1.0.64"
serde_yaml = "0.8.21"

# For postgreSQL database
mobc-postgres = {version = "0.7.0", features = ["with-chrono-0_4"]}
mobc = "0.7.3"

# For async programmation
tokio = {version = "1.8.0", features = ["macros", "fs"]}
async-trait = "0.1.51"

# For error handling
thiserror = "1.0.30"

# For testing
rstest =  "0.11.0"
async-std = { version = "1.10.0", features = ["tokio1", "attributes"] }
